<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="revenue_express.ziamfood_merchant.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/bg_login"
                        android:scaleType="centerCrop"/>
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/merchant" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:textColor="@color/black" />
                    <android.support.design.widget.TextInputLayout
                    android:id="@+id/etUserLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Your Username"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:background="@drawable/background_gray"/>
                </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/black" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background_gray"
                            android:imeOptions="actionUnspecified"
                            android:hint="Enter Your Password"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Id_shop"
                        android:textColor="@color/black" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etShoeIDLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_shop_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Enter Your Shop ID"
                            android:imeOptions="actionUnspecified"
                            android:inputType="number"
                            android:background="@drawable/background_gray"/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="12dp"
                        android:background="@color/pink2"
                        android:text="@string/login"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
